@@ -1,4 +1,5 @@
 AUX 70_mod_mirrorbrain.conf 121 RMD160 9acbd1532ce8b21f32b04cc8a9dc003aed591294 SHA1 31403a2f4f9e493637e171cc45a3eaa7a0265753 SHA256 9e21ebd72dfa45ab03130d14e7667ef4bdc51427c18c9e2a90ff27d1031ada66
 DIST mirrorbrain-2.8.tar.gz 307722 RMD160 83fccfc8bff5a9c07d38407b44681135c3741bb9 SHA1 79470b1c46b6fb861001e7ff9c903f41948eb8e8 SHA256 204ea49097da5502443d7f8a5f34181667486de6c0be227da7e4524cba146125
 EBUILD mod_mirrorbrain-2.8.ebuild 1022 RMD160 3c059df65c38acadf38a5131b0849c544bc56c16 SHA1 5402ad9400810fe655f74d66dba66e9f3de40492 SHA256 4703b52099c8a3016597c07446a67fe40db8948a5a895e00e9842bcb6b50d575
-MISC ChangeLog 402 RMD160 6ca6c4fd13c6b41bffa1f1ab4fb78f1cbb68ed42 SHA1 d540a6a6852dc56a5a180bedf25bb9b73f466a79 SHA256 63b4a75b5f120645e643d169252d73a67de08ac335962cf757f121c0d2b31de0
+EBUILD mod_mirrorbrain-9999.ebuild 1082 RMD160 64352ad87136f43f8cbc52904c9ba358e4e2faef SHA1 bf1958084913c0b659ecd7c0775c75a4bd28147b SHA256 4df9db9cb6a298997b41d006ff7806e9559436a12aaf737926cbd57d2c3d7336
+MISC ChangeLog 549 RMD160 503453240e2d035e5ba8a89beb92629bb954767c SHA1 28f0457cc28c2cee30c3d9b829e345cbe67486c8 SHA256 037af46d404263c23db22ec05d8ec0dcdc1583114a49dda4b1ae255452bd8e2f
